project/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: boat-race
  labels:
    app.kubernetes.io/managed-by: kubectl
