project/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: boat-race-api
  namespace: boat-race
  labels:
    app: boat-race-api
spec:
  type: ClusterIP
  selector:
    app: boat-race-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
---
# Redis サービス
apiVersion: v1
kind: Service
metadata:
  name: boat-race-redis
  namespace: boat-race
spec:
  type: ClusterIP
  selector:
    app: boat-race-redis
  ports:
    - port: 6379
      targetPort: 6379
